// <auto-generated />
using System;
using AgainstTheSpread.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace AgainstTheSpread.Data.Migrations
{
    [DbContext(typeof(AtsDbContext))]
    [Migration("20260101224204_AddTeamAliases")]
    partial class AddTeamAliases
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("AgainstTheSpread.Data.Entities.BowlGameEntity", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("BowlName")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<string>("Favorite")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<int?>("FavoriteScore")
                        .HasColumnType("int");

                    b.Property<DateTime>("GameDate")
                        .HasColumnType("datetime2");

                    b.Property<int>("GameNumber")
                        .HasColumnType("int");

                    b.Property<bool?>("IsPush")
                        .HasColumnType("bit");

                    b.Property<decimal>("Line")
                        .HasPrecision(5, 1)
                        .HasColumnType("decimal(5,1)");

                    b.Property<string>("OutrightWinner")
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<DateTime?>("ResultEnteredAt")
                        .HasColumnType("datetime2");

                    b.Property<Guid?>("ResultEnteredBy")
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("SpreadWinner")
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<string>("Underdog")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<int?>("UnderdogScore")
                        .HasColumnType("int");

                    b.Property<int>("Year")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("Year")
                        .HasDatabaseName("IX_BowlGames_Year");

                    b.HasIndex("Year", "GameNumber")
                        .IsUnique()
                        .HasDatabaseName("IX_BowlGames_Year_GameNumber");

                    b.ToTable("BowlGames", (string)null);
                });

            modelBuilder.Entity("AgainstTheSpread.Data.Entities.BowlPickEntity", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("BowlGameId")
                        .HasColumnType("int");

                    b.Property<int>("ConfidencePoints")
                        .HasColumnType("int");

                    b.Property<string>("OutrightWinnerPick")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<string>("SpreadPick")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<DateTime>("SubmittedAt")
                        .HasColumnType("datetime2");

                    b.Property<DateTime?>("UpdatedAt")
                        .HasColumnType("datetime2");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<int>("Year")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("BowlGameId");

                    b.HasIndex("UserId", "BowlGameId")
                        .IsUnique()
                        .HasDatabaseName("IX_BowlPicks_UserId_BowlGameId");

                    b.HasIndex("UserId", "Year")
                        .HasDatabaseName("IX_BowlPicks_UserId_Year");

                    b.HasIndex("UserId", "Year", "ConfidencePoints")
                        .HasDatabaseName("IX_BowlPicks_UserId_Year_Confidence");

                    b.ToTable("BowlPicks", (string)null);
                });

            modelBuilder.Entity("AgainstTheSpread.Data.Entities.GameEntity", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Favorite")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<int?>("FavoriteScore")
                        .HasColumnType("int");

                    b.Property<DateTime>("GameDate")
                        .HasColumnType("datetime2");

                    b.Property<bool?>("IsPush")
                        .HasColumnType("bit");

                    b.Property<decimal>("Line")
                        .HasPrecision(5, 1)
                        .HasColumnType("decimal(5,1)");

                    b.Property<DateTime?>("ResultEnteredAt")
                        .HasColumnType("datetime2");

                    b.Property<Guid?>("ResultEnteredBy")
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("SpreadWinner")
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<string>("Underdog")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<int?>("UnderdogScore")
                        .HasColumnType("int");

                    b.Property<int>("Week")
                        .HasColumnType("int");

                    b.Property<int>("Year")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("Year", "Week")
                        .HasDatabaseName("IX_Games_Year_Week");

                    b.HasIndex("Year", "Week", "Favorite", "Underdog")
                        .IsUnique()
                        .HasDatabaseName("IX_Games_Year_Week_Favorite_Underdog");

                    b.ToTable("Games", (string)null);
                });

            modelBuilder.Entity("AgainstTheSpread.Data.Entities.Pick", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("GameId")
                        .HasColumnType("int");

                    b.Property<string>("SelectedTeam")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<DateTime>("SubmittedAt")
                        .HasColumnType("datetime2");

                    b.Property<DateTime?>("UpdatedAt")
                        .HasColumnType("datetime2");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<int>("Week")
                        .HasColumnType("int");

                    b.Property<int>("Year")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("GameId");

                    b.HasIndex("UserId", "GameId")
                        .IsUnique()
                        .HasDatabaseName("IX_Picks_UserId_GameId");

                    b.HasIndex("UserId", "Year", "Week")
                        .HasDatabaseName("IX_Picks_UserId_Year_Week");

                    b.ToTable("Picks", (string)null);
                });

            modelBuilder.Entity("AgainstTheSpread.Data.Entities.TeamAliasEntity", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Alias")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<string>("CanonicalName")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<DateTime?>("UpdatedAt")
                        .HasColumnType("datetime2");

                    b.HasKey("Id");

                    b.HasIndex("Alias")
                        .IsUnique()
                        .HasDatabaseName("IX_TeamAliases_Alias");

                    b.HasIndex("CanonicalName")
                        .HasDatabaseName("IX_TeamAliases_CanonicalName");

                    b.ToTable("TeamAliases", (string)null);
                });

            modelBuilder.Entity("AgainstTheSpread.Data.Entities.User", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("DisplayName")
                        .IsRequired()
                        .HasMaxLength(256)
                        .HasColumnType("nvarchar(256)");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasMaxLength(256)
                        .HasColumnType("nvarchar(256)");

                    b.Property<string>("GoogleSubjectId")
                        .IsRequired()
                        .HasMaxLength(256)
                        .HasColumnType("nvarchar(256)");

                    b.Property<bool>("IsActive")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bit")
                        .HasDefaultValue(true);

                    b.Property<DateTime>("LastLoginAt")
                        .HasColumnType("datetime2");

                    b.HasKey("Id");

                    b.HasIndex("Email")
                        .HasDatabaseName("IX_Users_Email");

                    b.HasIndex("GoogleSubjectId")
                        .IsUnique()
                        .HasDatabaseName("IX_Users_GoogleSubjectId");

                    b.ToTable("Users", (string)null);
                });

            modelBuilder.Entity("AgainstTheSpread.Data.Entities.BowlPickEntity", b =>
                {
                    b.HasOne("AgainstTheSpread.Data.Entities.BowlGameEntity", "BowlGame")
                        .WithMany("Picks")
                        .HasForeignKey("BowlGameId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("AgainstTheSpread.Data.Entities.User", "User")
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("BowlGame");

                    b.Navigation("User");
                });

            modelBuilder.Entity("AgainstTheSpread.Data.Entities.Pick", b =>
                {
                    b.HasOne("AgainstTheSpread.Data.Entities.GameEntity", "Game")
                        .WithMany("Picks")
                        .HasForeignKey("GameId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("AgainstTheSpread.Data.Entities.User", "User")
                        .WithMany("Picks")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Game");

                    b.Navigation("User");
                });

            modelBuilder.Entity("AgainstTheSpread.Data.Entities.BowlGameEntity", b =>
                {
                    b.Navigation("Picks");
                });

            modelBuilder.Entity("AgainstTheSpread.Data.Entities.GameEntity", b =>
                {
                    b.Navigation("Picks");
                });

            modelBuilder.Entity("AgainstTheSpread.Data.Entities.User", b =>
                {
                    b.Navigation("Picks");
                });
#pragma warning restore 612, 618
        }
    }
}
